# bullet_syropod

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: auto_pose.yaml  bullet_gazebo_controllers.yaml  bullet_insectoid.yaml  bullet_mammalian.yaml  gait.yaml
launch/: bullet_gazebo.launch  bullet_highlevel.launch  bullet_log.launch
meshes/: Coxa.STL  Coxa_t.STL  Femur_tibia.STL  Foot_tip.STL  Tarsus.STL  base_motor.STL
robot/: bullet.xacro  macros.xacro  robot_box.urdf
